# AI-Ticket-Router-for-IT-Support

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/ utils/: logging.py  validators.py
app/api/: tickets.py
app/models/: schemas.py
app/services/: classifier.py  priority.py  router.py
docs/: api.md  architecture.md  screenshots.md
integrations/zendesk/: __init__.py  client.py
tests/: test_api.py  test_classifier.py  test_router.py
